--- a/Skins/Sonder/Date/1-Date_Transformable.ini
+++ b/Skins/Sonder/Date/1-Date_Transformable.ini
@@ -27,12 +27,12 @@ FormatLocale=#LanguageOverride#
 ;These are to keep it centered as it is skewed so little moving is needed by user
 [TMm31TXCalc_Date]
 Measure=Calc
-Formula=((#TMm21_Date#*(-#WHSize_Date#/2))+((#TMm11_Date#-1)*(-#WHSize_Date#/2))+#TMm31TX_Date#)
+Formula=((#DateScale#*#TMm21_Date#*(-#WHSize_Date#/2))+((#TMm11_Date#-1)*(#DateScale#*-#WHSize_Date#/2))+(#DateScale#*#RotateAngle_Date#*0.13)+#TMm31TX_Date#)
 DynamicVariables=1
 
 [TMm32TYCalc_Date]
 Measure=Calc
-Formula=((#TMm12_Date#*(-#WHSize_Date#/2))+((#TMm22_Date#-1)*(-#WHSize_Date#/2))+#TMm32TY_Date#+Abs(#RotateAngle_Date#)*0.3)
+Formula=((#DateScale#*#TMm12_Date#*(-#WHSize_Date#/2))+((#TMm22_Date#-1)*(#DateScale#*-#WHSize_Date#/2))+(#DateScale#*Abs(#RotateAngle_Date#)*0.15)+#TMm32TY_Date#)
 DynamicVariables=1
 
 [Background]
@@ -47,7 +47,7 @@ H=(#DateScale#*#WHSize_Date#)
 Meter=STRING
 SolidColor=0,0,0,1
 MeasureName=MeasureDate
-StringAlign=CenterBottom
+StringAlign=CenterCenter
 ;StringAlign=#DateAlign#
 StringCase=#DateStringCase#
 StringStyle=Normal
@@ -61,6 +61,8 @@ ClipString=0
 X=(#DateScale#*(#WHSize_Date#/2))
 Y=(#DateScale#*(#WHSize_Date#/2))
 TransformationMatrix=#TMm11_Date#;#TMm12_Date#;#TMm21_Date#;#TMm22_Date#;[TMm31TXCalc_Date];[TMm32TYCalc_Date]
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 DynamicVariables=1
 Angle=(Rad(#RotateAngle_Date#))
 
