--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -51,5 +51,6 @@ MeterStyle=DateStyle
 X=([Background:W]/#DateAlignAdjust#)
 ;text=wednesday | september 25 2020
 Y=0
-
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 
