--- a/Skins/Sonder/Date/1-Date_vert1.ini
+++ b/Skins/Sonder/Date/1-Date_vert1.ini
@@ -54,3 +54,5 @@ Meter=STRING
 MeterStyle=Date1
 X=(#DateScale#*126)
 Y=0
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
