--- a/Skins/Sonder/Date/4-Date_Global.ini
+++ b/Skins/Sonder/Date/4-Date_Global.ini
@@ -52,6 +52,8 @@ StringAlign=Center
 StringCase=Upper
 AntiAlias=1
 ClipString=0
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 
 [MeterDay]
 Meter=String
@@ -67,4 +69,6 @@ StringAlign=Center
 StringCase=Upper
 AntiAlias=1
 InlineSetting=CharacterSpacing | (#DateScale#*11.25) | (#DateScale#*11.25)
+InlinePattern2=(.*)
+InlineSetting2=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 ClipString=0
