--- a/Skins/Sonder/Date/5-Date_Weekday+Time.ini
+++ b/Skins/Sonder/Date/5-Date_Weekday+Time.ini
@@ -65,6 +65,8 @@ ClipString=0
 InlineSetting=CharacterSpacing | (10*#Scale#) | (10*#Scale#)
 AntiAlias=1
 DynamicVariables=1
+InlinePattern2=(.*)
+InlineSetting2=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 
 [MeterDate]
 Meter=String
@@ -82,6 +84,8 @@ Y=(75*#Scale#)
 Text="%1"
 AntiAlias=1
 DynamicVariables=1
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
 
 [MeterClock]
 Meter=String
@@ -100,3 +104,5 @@ Y=(120*#Scale#)
 Text="- %1 -"
 AntiAlias=1
 DynamicVariables=1
+InlinePattern=(.*)
+InlineSetting=Shadow | #ShadowBlurX_Date# | #ShadowBlurY_Date# | #DateBlurAmount# | #DateShadowColor#
