--- a/Skins/Sonder/Time/Time_Transformable.ini
+++ b/Skins/Sonder/Time/Time_Transformable.ini
@@ -36,12 +36,12 @@ Format="%M"
 ;These are to keep it centered as it is skewed so little moving is needed by user
 [TMm31TXCalc]
 Measure=Calc
-Formula=((#TMm21#*(-#WHSize#/2))+((#TMm11#-1)*(-#WHSize#/2))+#TMm31TX#)
+Formula=((#TimeScale#*#TMm21#*(-#WHSize#/2))+((#TMm11#-1)*(#TimeScale#*-#WHSize#/2))+(#TimeScale#*#RotateAngle#*0.6)+#TMm31TX#)
 DynamicVariables=1
 
 [TMm32TYCalc]
 Measure=Calc
-Formula=((#TMm12#*(-#WHSize#/2))+((#TMm22#-1)*(-#WHSize#/2))+#TMm32TY#+Abs(#RotateAngle#)*1.55)
+Formula=((#TimeScale#*#TMm12#*(-#WHSize#/2))+((#TMm22#-1)*(#TimeScale#*-#WHSize#/2))+(#TimeScale#*Abs(#RotateAngle#)*0.7)+#TMm32TY#)
 DynamicVariables=1
 
 [Background]
@@ -57,7 +57,7 @@ Meter=STRING
 SolidColor=0,0,0,1
 MeasureName=MeasureTimeHour
 MeasureName2=MeasureTimeMinutes
-StringAlign=CenterBottom
+StringAlign=CenterCenter
 StringCase=None
 StringStyle=Normal
 StringEffect=Shadow
