--- a/Skins/Sonder/Date/1-Date_Transformable.ini
+++ b/Skins/Sonder/Date/1-Date_Transformable.ini
@@ -9,8 +9,8 @@ ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Name=Sonder 2 - Date
-Information=Date Horizontal
-Version=2.5.7
+Information=Date Transformable - Rotate, Skew, and Scale via the Settings.
+Version=2.6.0
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
