--- a/Skins/Sonder/Time/Time_Transformable.ini
+++ b/Skins/Sonder/Time/Time_Transformable.ini
@@ -13,10 +13,10 @@ DynamicWindowSize=1
 AccurateText=1
 
 [Metadata]
-Name=Sonder 2 - Time (horizontal)
-Author=mpurses (Elegance Mod)
-Information=This Time can be set to either 12-hours or 24-hours, | use the Confinguration tool for this and more options.
-Version=2.5.7
+Name=Time (Transformable)
+Author=mpurses
+Information=Time Transformable - Rotate, Skew, and Scale via the Settings.
+Version=2.6.0
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 
