--- a/Skins/Sonder/Time/Time_Transformable.ini
+++ b/Skins/Sonder/Time/Time_Transformable.ini
@@ -20,15 +20,9 @@ Version=2.6.0
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 
-[MeasureTimeHour]
+[MeasureTime]
 Measure=Time
-Format="#Hours#"
-;Format="00"
-
-[MeasureTimeMinutes]
-Measure=Time
-Format="%M"
-;Format="00"
+Format=#TimeTransformFormat#
 
 [Variables]
 @include=#@#Variables.inc
@@ -55,8 +49,7 @@ H=(#TimeScale#*#WHSize#)
 [Time1]
 Meter=STRING
 SolidColor=0,0,0,1
-MeasureName=MeasureTimeHour
-MeasureName2=MeasureTimeMinutes
+MeasureName=MeasureTime
 StringAlign=CenterCenter
 StringCase=None
 StringStyle=Normal
@@ -70,12 +63,11 @@ ClipString=0
 X=(#TimeScale#*(#WHSize#/2))
 Y=(#TimeScale#*(#WHSize#/2))
 DynamicVariables=1
-Text=%1%2
-InlinePattern=^(\d{1,2})\d{2}$
+InlinePattern=#TransformHourPattern#
 InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorHour#
-InlinePattern2=^\d{1,2}(\d{2})$
+InlinePattern2=#TransformMinutePattern#
 InlineSetting2=Color | #color3#
-InlinePattern3=^\d{1,2}(\d{2})$
+InlinePattern3=#TransformMinutePattern#
 InlineSetting3=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorMinute#
 TransformationMatrix=#TMm11#;#TMm12#;#TMm21#;#TMm22#;[TMm31TXCalc];[TMm32TYCalc]
 Angle=(Rad(#RotateAngle#))
