--- a/Skins/Sonder/Time/Time_hori1.ini
+++ b/Skins/Sonder/Time/Time_hori1.ini
@@ -21,7 +21,6 @@ Information=This Time can be set to either 12-hours or 24-hours, | use the Confi
 Version=2.6.0
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
-
 [MeasureTimeHour]
 Measure=Time
 Format="#Hours#"
@@ -34,6 +33,7 @@ Format="%M"
 
 [Variables]
 @include=#@#Variables.inc
+@Include2=#@#Chameleon\Chameleon-Styles.inc
 
 ;-------------------------------
 [Measuresettingsformula]
@@ -83,6 +83,9 @@ StringStyle=Normal
 StringEffect=Shadow
 FontEffectColor=#TimeShadowColor#
 FontColor=#color3#
+;FontColor=[ChamFG2]
+;FontColor=[ChamBG2]AE
+;FontColor=[ChamFG2]
 FontFace=#TimeFont#
 FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
@@ -107,5 +110,5 @@ MeterStyle=time2style
 X=(#TimeScale#*(225+#TimeHMSpacing#))r
 Y=r
 InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorMinute#
-
+DynamicVariables=1
 
