--- a/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
+++ b/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
@@ -29,7 +29,7 @@ Measure=NowPlaying
 PlayerName=Spotify
 PlayerType=Artist
 IfMatch=^$
-IfMatchAction=[!DeactivateConfig "#ROOTCONFIG#\Visualizer"][!Log "Spotify Closed: Unload Visualizer"]
+IfMatchAction=[!DeactivateConfig "#ROOTCONFIG#\Visualizer"][!Log "Spotify Closed/Paused: Unload Visualizer"]
 IfNotMatchAction=[!ActivateConfig "#ROOTCONFIG#\Visualizer" "Dots-Visualizer.ini"][!Log "Spotify Open: Load Visualizer"]
 
 ;Use this measure format instead if using another player
