--- a/Skins/Sonder/Settings/Language-Override.ini
+++ b/Skins/Sonder/Settings/Language-Override.ini
@@ -34,7 +34,7 @@ W=46
 H=33
 MouseOverAction=[!SetOption Exit ImageName #@#Images\Exit-on.png][!UpdateMeter Exit][!Redraw]
 MouseLeaveAction=[!SetOption Exit ImageName #@#Images\Exit-off-transparent.png][!UpdateMeter Exit][!Redraw]
-LeftMouseUpAction=!RainmeterDeactivateConfig
+LeftMouseUpAction=!DeactivateConfig
 ToolTipText=Close
 
 [Title]
