--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ Skins/Sonder/@Resources/Presets/Preset/Snap/PERSONAL-Sonder Transform.png
 Skins/Sonder/@Resources/Presets/Preset/Snap/PERSONAL-Lunar.png
 Skins/Sonder/@Resources/Presets/Preset/PERSONAL-Sonder Transform.inc
 Skins/Sonder/@Resources/Presets/Preset/PERSONAL-Lunar.inc
+WebNowPlaying/
