--- a/.gitignore
+++ b/.gitignore
@@ -368,4 +368,5 @@ Skins/Sonder/@Resources/Presets/Preset/Snap/PERSONAL-Lunar.png
 Skins/Sonder/@Resources/Presets/Preset/PERSONAL-Sonder Transform.inc
 Skins/Sonder/@Resources/Presets/Preset/PERSONAL-Lunar.inc
 WebNowPlaying/
-RMSKIN Package TO-DO/
+RMSKIN Package files/
+Skins/Sonder/Sonder.code-workspace
