--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: mpurses
-custom: ["paypal.me/michaelpurses"]
+custom: ["https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=E59D22UD5FZGY&item_name=Sonder+donation&currency_code=USD"]
