--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,3 +2,5 @@
 
 github: mpurses
 custom: ["paypal.com/cgi-bin/webscr?cmd=_donations&business=E59D22UD5FZGY&item_name=Sonder+donation&currency_code=USD"]
+custom: ["https://venmo.com/MichaelPurses"]
+custom: ["https://cash.app/$MichaelPurses"]
