--- a/Skins/Sonder/EverydayHabitCalendar/MonthHabitCalendar+5Habits.ini
+++ b/Skins/Sonder/EverydayHabitCalendar/MonthHabitCalendar+5Habits.ini
@@ -13,11 +13,7 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 ;==============================================================================================================================================================================
 ;                                                                                          TO DO
-;fix performance issues
-;Another variant grouped my months (4x3)
 ;add custom length option from a starting date (For a 75 day program for example)
-;custom message at top/list of goals?
-;lighter color days, hover brighter - Nevermind, too complicated/possible performance hit maybe since i have to add a seperate mouse hover to each day and not the group styles(im tired of copypasting)
 ;==============================================================================================================================================================================
 
 [Variables]
@@ -36,7 +32,7 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 ;@include11=#@#Calendar\Calendar-Day-Variables-9.inc
 ;@include12=#@#Calendar\Calendar-Day-Variables-10.inc
 @include13=#@#Calendar\Calendar-Measures.inc
-HabitSpacingsDay=((#WORKAREAWIDTH#-#MeterDay1X#)/31)
+HabitSpacingsDay=((#SCREENAREAWIDTH#-#MeterDay1X#)/31)
 HabitSpacingsMonth=((#WORKAREAHEIGHT#-62)/12)
 
 [CalculateDay29Draw]
@@ -169,7 +165,7 @@ Meter=IMAGE
 SolidColor=#CalendarBackgroundColor#
 X=0
 Y=0
-;W=#WORKAREAWIDTH#
+;W=#SCREENAREAWIDTH#
 ;H=#WORKAREAHEIGHT#
 W=#SCREENAREAWIDTH#
 H=#SCREENAREAHEIGHT#
@@ -177,7 +173,7 @@ H=#SCREENAREAHEIGHT#
 [SettingsHoverArea]
 Meter=Shape
 Shape=Rectangle 0,0,400,75 | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-X=(#WORKAREAWIDTH#-400)
+X=(#SCREENAREAWIDTH#-400)
 Y=0
 MouseOverAction=[!ShowMeter SettingsIcon][!UpdateMeter SettingsIcon][!Redraw]
 MouseLeaveAction=[!HideMeter SettingsIcon][!UpdateMeter SettingsIcon][!Redraw]
@@ -185,7 +181,7 @@ MouseLeaveAction=[!HideMeter SettingsIcon][!UpdateMeter SettingsIcon][!Redraw]
 [SettingsIcon]
 Meter=IMAGE
 ImageName=#@#Images\Settings-Box.png
-X=(#WORKAREAWIDTH#-(46*3))
+X=(#SCREENAREAWIDTH#-(46*3))
 Y=0
 W=46
 H=32
@@ -200,7 +196,7 @@ Meter=IMAGE
 ImageName=#@#Images\Exit-off-transparent.png
 W=46
 H=33
-X=(#WORKAREAWIDTH#-46)
+X=(#SCREENAREAWIDTH#-46)
 Y=0
 MouseOverAction=[!SetOption Exit ImageName #@#Images\Exit-on.png][!UpdateMeter Exit][!Redraw]
 MouseLeaveAction=[!SetOption Exit ImageName #@#Images\Exit-off-transparent.png][!UpdateMeter Exit][!Redraw]
@@ -211,7 +207,7 @@ Meter=IMAGE
 ImageName=#@#Images\minimize-off.png
 W=46
 H=32
-X=(#WORKAREAWIDTH#-46-46)
+X=(#SCREENAREAWIDTH#-46-46)
 Y=0
 MouseOverAction=[!SetOption Minimize ImageName #@#Images\minimize-on.png][!UpdateMeter Minimize][!Redraw]
 MouseLeaveAction=[!SetOption Minimize ImageName #@#Images\minimize-off.png][!UpdateMeter Minimize][!Redraw]
@@ -220,7 +216,7 @@ LeftMouseUpAction=[!ActivateConfig "#ROOTCONFIG#\EverydayHabitCalendar\StreakNum
 [HeaderText]
 Meter=STRING
 Stringalign=Center
-X=(#WORKAREAWIDTH#/2)
+X=(#SCREENAREAWIDTH#/2)
 Y=5
 Antialias=1
 Text=#HeaderText#
@@ -239,7 +235,7 @@ DynamicVariables=1
 Antialias=1
 ;UpdateDivider=-1
 ;flip negatives for horiz/vert layout
-X=(#WORKAREAWIDTH#/2)-30
+X=(#SCREENAREAWIDTH#/2)-30
 Y=32
 W=60
 H=60
@@ -259,7 +255,7 @@ DynamicVariables=1
 Fontsize=(#HeaderTextSize#+6)
 Fontface=#LocalFontFace3#
 FontColor=#FontColorOn#
-X=(#WORKAREAWIDTH#/2)
+X=(#SCREENAREAWIDTH#/2)
 Y=40
 text=#CurrentStreak#
 Tooltiptext=Streak
@@ -269,7 +265,7 @@ Tooltiptext=Streak
 ; [HabitText]
 ; Meter=STRING
 ; Stringalign=Left
-; X=((#WORKAREAWIDTH#/2)-65)
+; X=((#SCREENAREAWIDTH#/2)-65)
 ; Y=40r
 ; Antialias=1
 ; Text=#HabitsList#
@@ -301,9 +297,9 @@ Group=Months
 
 [Habit1Container]
 Meter=Shape
-Shape=Rectangle 0,(60+#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 
 [HabitNameStyle]
 Stringalign=CenterCenter
@@ -323,9 +319,9 @@ Text=#Habit1#
 
 [Habit2Container]
 Meter=Shape
-Shape=Rectangle 0,(60+2*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+2*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+2*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+2*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+2*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+2*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit2Disabled#
 [Habit2]
 Meter=STRING
@@ -335,9 +331,9 @@ Hidden=#Habit2Disabled#
 
 [Habit3Container]
 Meter=Shape
-Shape=Rectangle 0,(60+3*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+3*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+3*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+3*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+3*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+3*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit3Disabled#
 [Habit3]
 Meter=STRING
@@ -347,9 +343,9 @@ Hidden=#Habit3Disabled#
 
 [Habit4Container]
 Meter=Shape
-Shape=Rectangle 0,(60+4*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+4*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+4*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+4*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+4*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+4*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit4Disabled#
 [Habit4]
 Meter=STRING
@@ -359,9 +355,9 @@ Hidden=#Habit4Disabled#
 
 [Habit5Container]
 Meter=Shape
-Shape=Rectangle 0,(60+5*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+5*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+5*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+5*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+5*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+5*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit5Disabled#
 [Habit5]
 Meter=STRING
@@ -371,9 +367,9 @@ Hidden=#Habit5Disabled#
 
 [Habit6Container]
 Meter=Shape
-Shape=Rectangle 0,(60+6*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+6*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+6*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+6*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+6*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+6*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit6Disabled#
 [Habit6]
 Meter=STRING
@@ -383,9 +379,9 @@ Hidden=#Habit6Disabled#
 
 [Habit7Container]
 Meter=Shape
-Shape=Rectangle 0,(60+7*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+7*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+7*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+7*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+7*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+7*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit7Disabled#
 [Habit7]
 Meter=STRING
@@ -395,9 +391,9 @@ Hidden=#Habit7Disabled#
 
 [Habit8Container]
 Meter=Shape
-Shape=Rectangle 0,(60+8*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+8*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+8*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+8*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+8*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+8*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit8Disabled#
 [Habit8]
 Meter=STRING
@@ -407,9 +403,9 @@ Hidden=#Habit8Disabled#
 
 [Habit9Container]
 Meter=Shape
-Shape=Rectangle 0,(60+9*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+9*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+9*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+9*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+9*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+9*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit9Disabled#
 [Habit9]
 Meter=STRING
@@ -419,9 +415,9 @@ Hidden=#Habit9Disabled#
 
 [Habit10Container]
 Meter=Shape
-Shape=Rectangle 0,(60+10*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
-MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+10*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
-MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+10*#HabitSpacingsMonth#),#WORKAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+Shape=Rectangle 0,(60+10*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1
+MouseOverAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+10*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color #RowHighlightColor# | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
+MouseLeaveAction=[!SetOption #CURRENTSECTION# Shape "Rectangle 0,(60+10*#HabitSpacingsMonth#),#SCREENAREAWIDTH#,#HabitSpacingsMonth# | Fill Color 0,0,0,1 | Stroke Color 0,0,0,1"][!UpdateMeter #CURRENTSECTION#][!Redraw]
 Hidden=#Habit10Disabled#
 [Habit10]
 Meter=STRING
